feature(import): allow import skipping when nested doc limit reached
relates to OPT-5453